package AnalistaSistemas;
import Usuarios.UsuarioAbstrato;
public class AnalistaSistemasModel extends UsuarioAbstrato {
    public AnalistaSistemasModel( String nome){
        super(nome,"AnalistaSistemas");
    }

    //métodos para a classe AnalistaSistemas
}