package Gerente;
import Usuarios.UsuarioAbstrato;
public class GerenteModel extends UsuarioAbstrato {
    public GerenteModel(String nome){
        super(nome,"Gerente");
    }

    //métodos para a classe gerente
}